# bq-lora

./: .gitignore  README.md
app/: CMakeLists.txt  bme280.c  bme280.h  calib.c  calib.h  config.h  gps.c  gps.h  i18n.c  i18n.h  main.c  mesh.c  mesh.h  pb.c  pb.h  pwrbtn.c  pwrbtn.h  settings.c  settings.h  sys.c  sys.h  theme.h  touch.c  touch.h  ui.c  ui.h  ui_about.c  ui_about.h  ui_audio.c  ui_audio.h  ui_badusb.c  ui_badusb.h  ui_bt.c  ui_bt.h  ui_camera.c  ui_camera.h  ui_chanmgr.c  ui_chanmgr.h  ui_chat.c  ui_chat.h  (+21 more)
badusb/: hello.txt  info.txt
config/: config.txt.append  lora.yaml
deploy/: 99-bq-lora-ui-fb.rules  backlight-init.sh  backlight.service  bluetooth-compat.conf  bq-lora-ui-btserial.service  bq-lora-ui-ctl  bq-lora-ui-shutdown.service  bq-lora-ui-splash.service  bq-lora-ui-sudoers  bq-lora-ui-update.sh  bq-lora-ui.service  fb-spi-link.sh  firewall.nft  firewall.service  meshui-btserial.service  meshui-ctl  meshui-shutdown.service  meshui-splash.service  meshui-sudoers  meshui-update.sh  meshui.service  optimize-boot.sh  provision.sh  shutdown-splash.sh  sshd-hardening.conf  usb-gadget.service  usb-hid-setup.sh  usb-ncm-setup.sh  usb-net-up.service  usb-net-up.sh  usb-storage-setup.sh  usb0-ignore-carrier.conf  usb0-keepup.sh  watchdog.conf
docs/: bluetooth.md  lv_conf.md
tools/: apply_channels.py  badusb.py  beep.py  cam.py  grab.py  maptiles.py  splash.py  touchcal.py
